dada_tests/validate/op-eq/lhs_func_call/compiler-output.ref
Error: you can only assign to local variables and fields, not arbitrary expressions
   ╭─[dada_tests/validate/op-eq/lhs_func_call.dada:5:5]
   │
 5 │     test(p) += 1
   ·     ───┬───  
   ·        ╰───── here
───╯
